@@ -34,7 +34,7 @@ public class GamePanel extends JLayeredPane implements MouseMotionListener {
     Timer redrawTimer;
     Timer advancerTimer;
     Timer sunProducer;
-    Timer zombieProducer;
+    static Timer zombieProducer;
     static Timer zombieSpawn;
     JLabel sunScoreboard;
 
@@ -103,7 +103,8 @@ public class GamePanel extends JLayeredPane implements MouseMotionListener {
             a.setLocation(44 + (i%9)*100,109 + (i/9)*120);
             a.setAction(new PlantActionListener((i%9),(i/9)));
             colliders[i] = a;
-            add(a,new Integer(0));
+            // add(a,new Integer(0));
+            add(a, Integer.valueOf(0));
         }
 
         //colliders[0].setPlant(new FreezePeashooter(this,0,0));
@@ -121,15 +122,16 @@ public class GamePanel extends JLayeredPane implements MouseMotionListener {
         advancerTimer = new Timer(60,(ActionEvent e) -> advance());
         advancerTimer.start();
 
-        sunProducer = new Timer(5000,(ActionEvent e) -> {
+        sunProducer = new Timer(3000,(ActionEvent e) -> {
             Random rnd = new Random();
             Sun sta = new Sun(this,rnd.nextInt(800)+100,0,rnd.nextInt(300)+200);
             activeSuns.add(sta);
-            add(sta,new Integer(1));
+            // add(sta,new Integer(1));
+            add(sta, Integer.valueOf(1));
         });
         sunProducer.start();
 
-        zombieProducer = new Timer(7000,(ActionEvent e) -> {
+        zombieProducer = new Timer(6000,(ActionEvent e) -> {        //Should be 7000
             Random rnd = new Random();
             LevelData lvl = new LevelData();
             String [] Level = lvl.Level[Integer.parseInt(lvl.Lvl)-1];
@@ -146,7 +148,7 @@ public class GamePanel extends JLayeredPane implements MouseMotionListener {
         });
         zombieProducer.start();
 
-        zombieSpawn = new Timer(1500,(ActionEvent e) -> {
+        zombieSpawn = new Timer(1000,(ActionEvent e) -> {       //Should be 1500
             Random rnd = new Random();
             LevelData lvl = new LevelData();
             String [] Level = lvl.Level[Integer.parseInt(lvl.Lvl)-1];
@@ -233,7 +235,7 @@ public class GamePanel extends JLayeredPane implements MouseMotionListener {
                 }else if (p instanceof Puff) {
                     g.drawImage(fumeImage, p.posX, 130 + (i * 120), null);
                 } else {
-                    g.drawImage(peaImage, p.posX, 130 + (i * 120), null);
+                    g.drawImage(peaImage, p.posX, 130+(i*120), null);
                 }
             }
             /*for (int j=0; j < laneBombs.get(i).size(); j++) {
@@ -316,21 +318,26 @@ public class GamePanel extends JLayeredPane implements MouseMotionListener {
     public static void setProgress(int num) {
         progress = progress + num;
         System.out.println(progress);
-        if(progress == 150) {
+    
+        if (progress == 150) {
             zombieSpawn.start();
         }
-        if(progress>=550) {
-           if("1".equals(LevelData.Lvl)) {
-            JOptionPane.showMessageDialog(null,"Level Completed !!!" + '\n' + "Starting next Level");
-            GameWindow.gw.dispose();
-            LevelData.write("2");
-            GameWindow.gw = new GameWindow();
-            }  else {
-               JOptionPane.showMessageDialog(null,"Level Completed !!!" + '\n' + "More Levels will come soon !!!" + '\n' + "Resetting data");
-               LevelData.write("1");
-               System.exit(0);
-           }
-           progress = 0;
+        if (progress >= 550) {
+            zombieSpawn.stop();
+            zombieProducer.stop();
+            if ("1".equals(LevelData.Lvl)) {
+                JOptionPane.showMessageDialog(null, "Level 1 completed !" + '\n' + "Next level.");
+                GameWindow.gw.dispose();
+                LevelData.write("2");
+                GameWindow.gw = new GameWindow();
+                progress = 0;
+            } else {
+                JOptionPane.showMessageDialog(null, "Level 2 completed !" + '\n' + "New levels will be updated" + '\n' + "Reset data");
+                LevelData.write("1");
+                System.exit(0);
+                progress = 0;
+            }
         }
     }
+    
 }
